<resources>
    <string name="app_name">Quagl Solver</string>
    <string name="equation" translatable="false">ax²+bx+c=0</string>
    <string name="solve_button">Solve</string>
    <string name="name_a" translatable="false">a</string>
    <string name="name_b" translatable="false">b</string>
    <string name="name_c" translatable="false">c</string>
    <string name="aMustNotBeZero">\'a\'must not be zero</string>
    <string name="x1DoesNotExist">\'x1\' does not exist</string>
    <string name="x2DoesNotExist">\'x2\' does not exist</string>
    <string name="invalidInput">Invalid Input</string>
    <string name="xRealResults">%1$d real solution (s)</string>
    <string name="xComplexResults">%1$d complex solution (s)</string>
</resources>
